@@ -14,9 +14,6 @@ a support library for audio elements
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### ENUM GstAudioFieldFlag ##### -->
 <para>
 
