@@ -14,6 +14,3 @@ gconf default elements support
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
