@@ -14,9 +14,6 @@ an implementation of an audio ringbuffer
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT GstRingBuffer ##### -->
 <para>
 
