@@ -14,9 +14,6 @@ interface for elements that provide tuner operations
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT GstTuner ##### -->
 <para>
 
